NTI-5327 - fix gap

--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -7,7 +7,7 @@
 .content-link.related-work-ref {
 	$gap: 20px;
 	$icon-width: 100px;
-	$icon-ratio: 1.28;
+	$icon-ratio: 1.25;
 
 	color: $primary-grey;
 	text-decoration: inherit;
@@ -35,6 +35,7 @@
 		height: ceil($icon-width * $icon-ratio);
 		margin: 0;
 		box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.1);
+		// background-color: #f0f0f0;
 	}
 
 	h5 {
@@ -50,25 +51,6 @@
 	hr {
 		margin: 0;
 		border: 0;
-	}
-
-	@include respond-to(handhelds) {
-		$icon-ratio: 1.375;
-		$icon-width: 80px;
-		$gap: 10px;
-
-		margin: 10px 0;
-		padding-left: $icon-width + $gap;
-		min-height: ceil($icon-width * $icon-ratio);
-
-		.icon {
-			width: $icon-width;
-			height: ceil($icon-width * $icon-ratio);
-		}
-
-		h5 {
-			font-size: rem-calc(13px);
-		}
 	}
 
 	.label {
@@ -102,7 +84,10 @@
 	.extra-labels {
 		&:empty { display: none; }
 
-		margin: rem-calc(15px 0 0 0);
+		position: absolute;
+		margin: 0;
+		left: $icon-width + $gap;
+		bottom: 5px;
 		color: $tertiary-grey;
 
 		a, .nti-link-to-path {
@@ -117,6 +102,10 @@
 		font-size: rem-calc(13px);
 		font-weight: 400;
 		line-height: 1.4;
+
+		//don't crop decenders that stick out the left side:}
+		margin-left: -2px;
+		padding-left: 2px;
 	}
 
 	&.external {
@@ -171,6 +160,31 @@
 				background-color: rgba(0, 0, 0, 0.6);
 				border-radius: $s;
 			}
+		}
+	}
+
+	@include respond-to(handhelds) {
+		// $icon-ratio: 1.375;
+		$icon-width: 95px;
+		$gap: 10px;
+
+		margin: 10px 0;
+		padding-left: $icon-width + $gap;
+		min-height: max(120px, ceil($icon-width * $icon-ratio));
+
+		.icon {
+			width: $icon-width;
+			height: 100%;
+		}
+
+		h5 {
+			font-size: rem-calc(13px);
+		}
+
+		.extra-labels {
+			margin: 0 !important;
+			left: $icon-width + $gap;
+			bottom: 4px;
 		}
 	}
 }
